- Fix some double loading of some packages
- Fix double loading of `extensions.el` files
- Fix question for preferred coding systems on Microsoft Windows
- Properly enable saveplace (thanks to tuhdo)
- Don't bind `C-d` in `ido-completion-map` to `ido-delete-file-at-head`
  (thanks to segv)
- Don't refer to ~/.emacs.d/ directly at various places
  (thanks to jcpetkovich)
- Don't want paste-micro-state to pop up when pasting in ex command
  prompt (thanks to ralesi)
- Don't cycle when press TAB in eshell (thanks to tuhdo)
- Don't insert extra quote in dotspacemacs-mode (thanks to tuhdo)
- Adapt some micro-states to the micro-state macro (thanks to ralesi)
- Improve smooth scrolling configuration (reduce some point jump)
  (thanks to tuhdo)
- Improve `doge` banner grammar (thanks to mathpunk)
- New `HOTOWs.md` file in `/doc`
- Add `Buy A Drink` badge to README.md
- Typo and documentation updates (thanks to danielwuz, swaroopch,
  CestDiego, IvanMalison, agevelt, nwolfe)
** Hot Fixes
*** Startup Buffer
- Don't display the release notes in the startup buffer when Emacs is restarted
  after a fresh install
- Startup buffer: fix widget activation in `holy-mode` (thanks to tuhdo)
- Startup buffer: Don't fontify the startup buffer when `rainbow-identifiers`
*** Auto-completion
- Fix error when toggling auto-completion in some buffers
*** Haskell
- Add new `haskell-snippets` package (fixes error with required `haskell-yas`)
*** Org
- Org layer: exclude ox-gfm since it seems problematic for some users.
  package is used
*** Ruby
- Fix auto-completion activation.
*** Themes
- Fix conflict between official Spacemacs solarized theme and
  `color-theme-solarized` declared in `themes-megapack` layer.
- Add rules for all base16 themes (thanks to mkaito)
*** Various Fixes
- revert back `ag` as the default search tool instead of `pt`, `pt` can
  conflict with `pt` command line tool from TCL parser tools.
** Backports
None
* Previous Releases
- See Github release page

