@@ -9,7 +9,7 @@
 ;; This file is not part of GNU Emacs.
 ;;
 ;;; License: GPLv3
-(defconst spacemacs-version          "0.101.4" "Spacemacs version.")
+(defconst spacemacs-version          "0.101.5" "Spacemacs version.")
 (defconst spacemacs-emacs-min-version   "24.3" "Minimal version of Emacs.")
 
 (setq ns-use-native-fullscreen nil)
